--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,32 +1,66 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: 'Sarabun', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+    font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+    color: #0d0b0a;
+    background-color: #f2fafa;
+    ;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  min-width: 100vw;
-  min-height: 100vh;
-  margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-width: 100vw;
+    min-height: 100vh;
+    margin: 0;
 }
 
 main {
-  flex-grow: 1;
+    flex-grow: 1;
 }
-main:has(.back-link) {
-  text-align: center;
+
+/* ЗАГОЛОВОК ТА ТЕКСТ */
+
+.title {
+    font-size: 52px;
+    letter-spacing: 0.01em;
+    text-align: center;
+    margin-bottom: 24px;
+    font-weight: 400;
+}
+
+.paragraph {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    max-width: 768px;
+    margin: 0 auto;
+}
+
+/* КНОПКИ */
+
+.button {
+    background-color: #c2d9fc;
+    border: 1px solid #c2d9fc;
+    border-radius: 100px;
+    padding: 10px 24px;
+    min-width: 105px;
+    height: 46px;
+}
+
+.small-button:hover,
+.small-button:hover,
+.big-button:hover,
+.big-button:hover {
+    background-color: #8eabd7;
 }
