--- a/src/css/section-breathe-space.css
+++ b/src/css/section-breathe-space.css
@@ -1,6 +1,6 @@
 .section-four-container {
     text-align: center;
-    padding: 112px 0;
+    padding: 64px 0;
 
 }
 
@@ -15,18 +15,32 @@
 }
 
 .yoga-gallery-list li {
-    flex: 1 1 calc((100% - 48px) / 3);
-    max-width: 421px;
+    flex: 1 1 calc((100% - 24px) / 2);
+    max-width: 155px;
 }
 
 .section-four-container p {
-    margin-bottom: 80px;
+    margin-bottom: 48px;
 }
 
 
-@media only screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
+    .section-four-container {
+        padding: 40px 0;   }
 
-
+    .yoga-gallery-list li {
+        max-width: 340px;       
+    }
 }
 
-@media only screen and (min-width:768px) {}
+
+@media screen and (min-width: 1200px) {
+    .section-four-container {
+        padding: 112px 0;
+    }
+
+    .yoga-gallery-list li {
+        flex: 1 1 calc((100% - 48px) / 3);
+        max-width: 421px;
+    }
+}
