--- a/src/partials/section-breathe-space.html
+++ b/src/partials/section-breathe-space.html
@@ -1,3 +1,6 @@
 <section>
-  <div class="container"></div>
+  <div class="container">
+    <div class="section-four-container">
+
+  </div>
 </section>
