structure was updated 2

--- a/src/partials/section-breathe-space.html
+++ b/src/partials/section-breathe-space.html
@@ -1,6 +1,107 @@
 <section>
   <div class="container">
     <div class="section-four-container">
+      <h1 class="title">Breathe in the Space</h1>
+      <p class="paragraph">
+        Step inside YogaBloom and feel the calm. Explore our serene studio and
+        the peaceful moments our community shares during each session.
+      </p>
+      <ul class="yoga-gallery-list">
+        <li>
+          <picture>
+            <source
+              srcset="
+                /img/main/section-four/yoga-img-one-min.png 1x,
+                /img/main/section-four/yoga-img-one@2x.png  2x
+              "
+              type="image/png"
+            />
+            <img
+              src="/img/main/section-four/yoga-img-one-min.png"
+              alt="Group yoga"
+            />
+          </picture>
+        </li>
+        <li>
+          <picture>
+            <source
+              srcset="
+                /img/main/section-four/yoga-img-two-min.png 1x,
+                /img/main/section-four/yoga-img-two@2x.png  2x
+              "
+              type="image/png"
+            />
+            <img
+              src="/img/main/section-four/yoga-img-two-min.png"
+              alt="Group meditation"
+            />
+          </picture>
+        </li>
 
+        <li>
+          <picture>
+            <source
+              srcset="
+                /img/main/section-four/yoga-img-three-min.png 1x,
+                /img/main/section-four/yoga-img-three@2x.png  2x
+              "
+              type="image/png"
+            />
+            <img
+              src="/img/main/section-four/yoga-img-three-min.png"
+              alt="Empty studio"
+            />
+          </picture>
+        </li>
+
+        <li>
+          <picture>
+            <source
+              srcset="
+                /img/main/section-four/yoga-img-four-min.png 1x,
+                /img/main/section-four/yoga-img-four@2x.png  2x
+              "
+              type="image/png"
+            />
+            <img
+              src="/img/main/section-four/yoga-img-four-min.png"
+              alt="Bright studio"
+            />
+          </picture>
+        </li>
+
+        <li>
+          <picture>
+            <source
+              srcset="
+                /img/main/section-four/yoga-img-five-min.png 1x,
+                /img/main/section-four/yoga-img-five@2x.png  2x
+              "
+              type="image/png"
+            />
+            <img
+              src="/img/main/section-four/yoga-img-five-min.png"
+              alt="Woman meditating"
+            />
+          </picture>
+        </li>
+
+        <li>
+          <picture>
+            <source
+              srcset="
+                /img/main/section-four/yoga-img-six-min.png 1x,
+                /img/main/section-four/yoga-img-six@2x.png  2x
+              "
+              type="image/png"
+            />
+            <img
+              src="/img/main/section-four/yoga-img-six-min.png"
+              alt="Lotus pose"
+            />
+          </picture>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
