--- a/src/partials/section-breathe-space.html
+++ b/src/partials/section-breathe-space.html
@@ -11,13 +11,30 @@
           <picture>
             <source
               srcset="
-                /img/main/section-four/section-four-img-1-desk.png 1x,
-                /img/main/section-four/section-four-img-1-desk@2x  2x
+                /img/img-for-desk/section-four-img-1-desk.png    1x,
+                /img/img-for-desk/section-four-img-1-desk@2x.png 2x
               "
+              media="(min-width: 1200px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-1-tabl.png    1x,
+                /img/img-for-desk/section-four-img-1-tabl@2x.png 2x
+              "
+              media="(min-width: 768px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-1.png    1x,
+                /img/img-for-desk/section-four-img-1@2x.png 2x
+              "
+              media="(max-width: 767px)"
               type="image/png"
             />
             <img
-              src="/img/img-for-desk/section-four-img-1-desk.png"
+              src="/img/img-for-desk/section-four-img-1.png"
               alt="Group yoga"
             />
           </picture>
@@ -26,14 +43,31 @@
           <picture>
             <source
               srcset="
-                /img/main/section-four/yoga-img-two-min.png 1x,
-                /img/main/section-four/yoga-img-two@2x.png  2x
+                /img/img-for-desk/section-four-img-2-desk.png    1x,
+                /img/img-for-desk/section-four-img-2-desk@2x.png 2x
               "
+              media="(min-width: 1200px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-2-tabl.png    1x,
+                /img/img-for-desk/section-four-img-2-tabl@2x.png 2x
+              "
+              media="(min-width: 768px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-2.png    1x,
+                /img/img-for-desk/section-four-img-2@2x.png 2x
+              "
+              media="(max-width: 767px)"
               type="image/png"
             />
             <img
-              src="/img/main/section-four/yoga-img-two-min.png"
-              alt="Group meditation"
+              src="/img/img-for-desk/section-four-img-2.png"
+              alt="Group yoga"
             />
           </picture>
         </li>
@@ -42,14 +76,31 @@
           <picture>
             <source
               srcset="
-                /img/main/section-four/yoga-img-three-min.png 1x,
-                /img/main/section-four/yoga-img-three@2x.png  2x
+                /img/img-for-desk/section-four-img-3-desk.png    1x,
+                /img/img-for-desk/section-four-img-3-desk@2x.png 2x
               "
+              media="(min-width: 1200px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-3-tabl.png    1x,
+                /img/img-for-desk/section-four-img-3-tabl@2x.png 2x
+              "
+              media="(min-width: 768px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-3.png    1x,
+                /img/img-for-desk/section-four-img-3@2x.png 2x
+              "
+              media="(max-width: 767px)"
               type="image/png"
             />
             <img
-              src="/img/main/section-four/yoga-img-three-min.png"
-              alt="Empty studio"
+              src="/img/img-for-desk/section-four-img-3.png"
+              alt="Group yoga"
             />
           </picture>
         </li>
@@ -58,14 +109,31 @@
           <picture>
             <source
               srcset="
-                /img/main/section-four/yoga-img-four-min.png 1x,
-                /img/main/section-four/yoga-img-four@2x.png  2x
+                /img/img-for-desk/section-four-img-4-desk.png    1x,
+                /img/img-for-desk/section-four-img-4-desk@2x.png 2x
               "
+              media="(min-width: 1200px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-4-tabl.png    1x,
+                /img/img-for-desk/section-four-img-4-tabl@2x.png 2x
+              "
+              media="(min-width: 768px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-4.png    1x,
+                /img/img-for-desk/section-four-img-4@2x.png 2x
+              "
+              media="(max-width: 767px)"
               type="image/png"
             />
             <img
-              src="/img/main/section-four/yoga-img-four-min.png"
-              alt="Bright studio"
+              src="/img/img-for-desk/section-four-img-4.png"
+              alt="Group yoga"
             />
           </picture>
         </li>
@@ -74,14 +142,31 @@
           <picture>
             <source
               srcset="
-                /img/main/section-four/yoga-img-five-min.png 1x,
-                /img/main/section-four/yoga-img-five@2x.png  2x
+                /img/img-for-desk/section-four-img-5-desk.png    1x,
+                /img/img-for-desk/section-four-img-5-desk@2x.png 2x
               "
+              media="(min-width: 1200px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-5-tabl.png    1x,
+                /img/img-for-desk/section-four-img-5-tabl@2x.png 2x
+              "
+              media="(min-width: 768px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-5.png    1x,
+                /img/img-for-desk/section-four-img-5@2x.png 2x
+              "
+              media="(max-width: 767px)"
               type="image/png"
             />
             <img
-              src="/img/main/section-four/yoga-img-five-min.png"
-              alt="Woman meditating"
+              src="/img/img-for-desk/section-four-img-5.png"
+              alt="Group yoga"
             />
           </picture>
         </li>
@@ -90,14 +175,31 @@
           <picture>
             <source
               srcset="
-                /img/main/section-four/yoga-img-six-min.png 1x,
-                /img/main/section-four/yoga-img-six@2x.png  2x
+                /img/img-for-desk/section-four-img-6-desk.png    1x,
+                /img/img-for-desk/section-four-img-6-desk@2x.png 2x
               "
+              media="(min-width: 1200px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-6-tabl.png    1x,
+                /img/img-for-desk/section-four-img-6-tabl@2x.png 2x
+              "
+              media="(min-width: 768px)"
+              type="image/png"
+            />
+            <source
+              srcset="
+                /img/img-for-desk/section-four-img-6.png    1x,
+                /img/img-for-desk/section-four-img-6@2x.png 2x
+              "
+              media="(max-width: 767px)"
               type="image/png"
             />
             <img
-              src="/img/main/section-four/yoga-img-six-min.png"
-              alt="Lotus pose"
+              src="/img/img-for-desk/section-four-img-6.png"
+              alt="Group yoga"
             />
           </picture>
         </li>
