--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,66 +1,65 @@
 :root {
-    font-family: 'Sarabun', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
-    font-weight: 400;
+  font-family: 'Sarabun', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: 400;
 
-    color: #0d0b0a;
-    background-color: #f2fafa;
-    ;
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
+  color: #0d0b0a;
+  background-color: #f2fafa;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    min-width: 100vw;
-    min-height: 100vh;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-width: 100vw;
+  min-height: 100vh;
+  margin: 0;
 }
 
 main {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 /* ЗАГОЛОВОК ТА ТЕКСТ */
 
 .title {
-    font-size: 52px;
-    letter-spacing: 0.01em;
-    text-align: center;
-    margin-bottom: 24px;
-    font-weight: 400;
+  font-size: 52px;
+  letter-spacing: 0.01em;
+  text-align: center;
+  margin-bottom: 24px;
+  font-weight: 400;
 }
 
 .paragraph {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.6;
-    text-align: center;
-    max-width: 768px;
-    margin: 0 auto;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.6;
+  text-align: center;
+  max-width: 768px;
+  margin: 0 auto;
 }
 
 /* КНОПКИ */
 
 .button {
-    background-color: #c2d9fc;
-    border: 1px solid #c2d9fc;
-    border-radius: 100px;
-    padding: 10px 24px;
-    min-width: 105px;
-    height: 46px;
+  background-color: #c2d9fc;
+  border: 1px solid #c2d9fc;
+  border-radius: 100px;
+  padding: 10px 24px;
+  min-width: 105px;
+  height: 46px;
 }
 
 .small-button:hover,
 .small-button:hover,
 .big-button:hover,
 .big-button:hover {
-    background-color: #8eabd7;
+  background-color: #8eabd7;
 }
