--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,7 @@
 <header class="header">
-  <div class="container"></div>
+  <div class="container">
+    <svg>
+      <use href="/img/public/sprite.svg#icon-chek"></use>
+    </svg>
+  </div>
 </header>
