--- a/src/partials/section-team.html
+++ b/src/partials/section-team.html
@@ -40,7 +40,7 @@
                   <svg class="icon" width="24" height="24">
                     <use
                       class="team-icon"
-                      href="./images/icons.svg#icon-linkedin"
+                      href=".src/img/sprite.svg#icon-linkedin"
                     ></use>
                   </svg>
                 </a>
