--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,53 @@
-<header class="header">
-  <div class="container"></div>
+<header class="header-page">
+  <div class="container header-container">
+    <!-- navigation header -->
+    <nav class="header-navigation">
+      <ul class="header-navigation-list">
+        <li class="navigation-list-item">
+          <a class="navigation-item-link" href="">Yoga Classes</a>
+        </li>
+        <li class="navigation-list-item">
+          <a class="navigation-item-link" href="">Team</a>
+        </li>
+        <li class="navigation-list-item">
+          <a class="navigation-item-link" href="">Testimonials</a>
+        </li>
+        <li class="navigation-list-item">
+          <a class="navigation-item-link" href="">Prising</a>
+        </li>
+        <li class="navigation-list-item">
+          <a class="navigation-item-link" href="">Contacts</a>
+        </li>
+      </ul>
+      <!-- logo yogabloom -->
+      <a class="logo-link" href="/src/index.html">
+        <svg class="logo-link-svg" width="108" height="32">
+          <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
+        </svg>
+      </a>
+      <!-- a-Join -->
+      <a href="">Join</a>
+    </nav>
+  </div>
+  <!-- navbar mobile menu -->
+  <div class="navbar-menu">
+    <div class="container navbar-menu-container">
+      <button type="button" class="navbar-close">
+        <svg class="navbar-close-svg" width="12" height="12">
+          <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
+        </svg>
+      </button>
+      <nav class="navbar-navigation">
+        <ul class="navbar-list">
+          <li class="navbar-item"><a href="navbar-link"></a></li>
+          <li class="navbar-item"><a href="navbar-link"></a></li>
+          <li class="navbar-item"><a href="navbar-link"></a></li>
+          <li class="navbar-item"><a href="navbar-link"></a></li>
+          <li class="navbar-item"><a href="navbar-link"></a></li>
+        </ul>
+      </nav>
+      <!-- a-Join -->
+      <a href="">Join</a>
+    </div>
+  </div>
 </header>
