--- a/src/css/base.css
+++ b/src/css/base.css
@@ -37,43 +37,10 @@ main {
     flex-grow: 1;
 }
 
-/* ЗАГОЛОВОК ТА ТЕКСТ */
-
-.title {
-    font-size: 40px;
-    letter-spacing: 0.01em;
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: 400;
-}
-
-.paragraph {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.6;
-    text-align: center;
-    max-width: 768px;
-    margin: 0 auto;
-}
-
-@media screen and (min-width: 768px) {
-    
-.title {
-    font-size: 52px;
-    margin-bottom: 24px;
-
-    }
-
-.paragraph {
-    font-size: 18px;
-
-    }
-
-}
 
 /* КНОПКИ */
 
-.button {
+.button-blu {
     background-color: #c2d9fc;
     border: 1px solid #c2d9fc;
     border-radius: 100px;
