--- a/src/css/section-breathe-space.css
+++ b/src/css/section-breathe-space.css
@@ -34,7 +34,7 @@
 }
 
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1336px) {
     .section-four-container {
         padding: 112px 0;
     }
@@ -43,4 +43,37 @@
         flex: 1 1 calc((100% - 48px) / 3);
         max-width: 421px;
     }
+}
+
+
+.title {
+    font-size: 40px;
+    letter-spacing: 0.01em;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 400;
+}
+
+.paragraph {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: center;
+    max-width: 768px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+
+    .title {
+        font-size: 52px;
+        margin-bottom: 24px;
+
+    }
+
+    .paragraph {
+        font-size: 18px;
+
+    }
+
 }
