--- a/src/partials/section-breathe-space.html
+++ b/src/partials/section-breathe-space.html
@@ -1,8 +1,8 @@
 <section>
   <div class="container">
     <div class="section-four-container">
-      <h1 class="title">Breathe in the Space</h1>
-      <p class="paragraph">
+      <h2 class="section-four-title">Breathe in the Space</h2>
+      <p class="section-four-paragraph">
         Step inside YogaBloom and feel the calm. Explore our serene studio and
         the peaceful moments our community shares during each session.
       </p>
@@ -14,7 +14,7 @@
                 /img/img-for-desk/section-four-img-1-desk.png    1x,
                 /img/img-for-desk/section-four-img-1-desk@2x.png 2x
               "
-              media="(min-width: 1200px)"
+              media="(min-width: 1336px)"
               type="image/png"
             />
             <source
@@ -39,6 +39,7 @@
             />
           </picture>
         </li>
+
         <li>
           <picture>
             <source
@@ -46,7 +47,7 @@
                 /img/img-for-desk/section-four-img-2-desk.png    1x,
                 /img/img-for-desk/section-four-img-2-desk@2x.png 2x
               "
-              media="(min-width: 1200px)"
+              media="(min-width: 1336px)"
               type="image/png"
             />
             <source
@@ -79,7 +80,7 @@
                 /img/img-for-desk/section-four-img-3-desk.png    1x,
                 /img/img-for-desk/section-four-img-3-desk@2x.png 2x
               "
-              media="(min-width: 1200px)"
+              media="(min-width: 1336px)"
               type="image/png"
             />
             <source
@@ -112,7 +113,7 @@
                 /img/img-for-desk/section-four-img-4-desk.png    1x,
                 /img/img-for-desk/section-four-img-4-desk@2x.png 2x
               "
-              media="(min-width: 1200px)"
+              media="(min-width: 1336px)"
               type="image/png"
             />
             <source
@@ -145,7 +146,7 @@
                 /img/img-for-desk/section-four-img-5-desk.png    1x,
                 /img/img-for-desk/section-four-img-5-desk@2x.png 2x
               "
-              media="(min-width: 1200px)"
+              media="(min-width: 1336px)"
               type="image/png"
             />
             <source
@@ -178,7 +179,7 @@
                 /img/img-for-desk/section-four-img-6-desk.png    1x,
                 /img/img-for-desk/section-four-img-6-desk@2x.png 2x
               "
-              media="(min-width: 1200px)"
+              media="(min-width: 1336px)"
               type="image/png"
             />
             <source
