--- a/src/css/section-popular-programs.css
+++ b/src/css/section-popular-programs.css
@@ -115,6 +115,22 @@ body {
     max-width: 768px;
   }
 }
+.programs-section picture,
+.programs-section img {
+  margin-bottom: 24px;
+}
+@media only screen and (min-width: 768px) {
+  .programs-section picture,
+  .programs-section img {
+    margin-bottom: 16px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .programs-section picture,
+  .programs-section img {
+    margin-bottom: 32px;
+  }
+}
 .programs-name {
   font-family: 'Cabin', sans-serif;
   font-weight: 400;
