--- a/src/partials/section-team.html
+++ b/src/partials/section-team.html
@@ -1,3 +1,393 @@
-<section>
-  <div class="container"></div>
+<section class="section-our-team">
+  <div class="container-team">
+    <div class="section-three-container">
+      <p class="subtitle">Meet</p>
+      <h2 class="title">Our Team</h2>
+      <p class="paragraph-team">
+        Dedicated professionals passionate about yoga and wellness.
+      </p>
+    </div>
+    <div class="team-container">
+      <ul class="team-list">
+        <li class="team-member">
+          <picture class="team-photo">
+            <source
+              media="(min-width: 1336px)"
+              srcset="
+                ../img/img-for-desk/section-three-img-1-desk.png   1x,
+                ../img/img-for-desk/section-three-img-1-desk2x.png 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-1-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-1-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-1.png    1x,
+                ../img/img-for-mob/section-three-img-1@2x.png 2x
+              "
+            />
+            <img
+              src="/img/img-for-mob/section-three-img-1.png"
+              alt="Liam Johnson"
+            />
+          </picture>
+          <div class="team-member-text">
+            <h3 class="team-name">Liam Johnson</h3>
+            <p class="team-position">Yoga Instructor</p>
+            <p class="team-description">
+              Liam specializes in mindfulness and stress reduction techniques
+              through guided meditation.
+            </p>
+            <ul class="social-links-list">
+              <li class="social-links-item">
+                <a
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="/img/sprite.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-item">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./img/sprite.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="team-member">
+          <picture class="team-photo">
+            <source
+              media="(min-width: 1336px)"
+              srcset="
+                /img/img-for-desk/section-three-img-2-desk.png    1x,
+                /img/img-for-desk/section-three-img-2-desk@2x.png 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-2-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-2-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-2.png    1x,
+                ../img/img-for-mob/section-three-img-2@2x.png 2x
+              "
+            />
+            <img
+              src="/img/img-for-mob/section-three-img-2.png"
+              alt="Emma Stone"
+            />
+          </picture>
+          <div class="team-member-text">
+            <h3 class="team-name">Emma Stone</h3>
+            <p class="team-position">Meditation Coach</p>
+            <p class="team-description">
+              Emma has over 10 years of experience in Hatha and Vinyasa yoga.
+            </p>
+            <ul class="social-links-list">
+              <li class="social-links-item">
+                <a
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./images/icons.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="team-member">
+          <picture class="team-photo">
+            <source
+              media="(min-width: 1336px)"
+              srcset="
+                /img/img-for-desk/section-three-img-3-desk.png    1x,
+                /img/img-for-desk/section-three-img-3-desk@2x.png 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-3-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-3-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-3.png    1x,
+                ../img/img-for-mob/section-three-img-3@2x.png 2x
+              "
+            />
+            <img
+              src="/img/img-for-mob/section-three-img-3.png"
+              alt="Sophia Lee"
+            />
+          </picture>
+          <div class="team-member-text">
+            <h3 class="team-name">Sophia Lee</h3>
+            <p class="team-position">Pilates Trainer</p>
+            <p class="team-description">
+              Sophia combines Pilates with yoga for a holistic fitness approach.
+            </p>
+            <ul class="social-links-list">
+              <li class="social-links-item">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./img/sprite.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="team-member">
+          <picture class="team-photo">
+            <source
+              media="(min-width: 1336px)"
+              srcset="
+                /img/img-for-desk/section-three-img-4-desk.png    1x,
+                /img/img-for-desk/section-three-img-4-desk@2x.png 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-4-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-4-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-4.png    1x,
+                ../img/img-for-mob/section-three-img-4@2x.png 2x
+              "
+            />
+            <img
+              src="/img/img-for-mob/section-three-img-4.png"
+              alt="Noah Brown"
+            />
+          </picture>
+          <div class="team-member-text">
+            <h3 class="team-name">Noah Brown</h3>
+            <p class="team-position">Yoga Therapist</p>
+            <p class="team-description">
+              Noah focuses on therapeutic yoga to aid recovery and enhance
+              well-being.
+            </p>
+            <ul class="social-links-list">
+              <li class="social-links-item">
+                <a
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./images/icons.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="team-member">
+          <picture class="team-photo">
+            <source
+              media="(min-width: 1336px)"
+              srcset="
+                /img/img-for-desk/section-three-img-5-desk.png    1x,
+                /img/img-for-desk/section-three-img-5-desk@2x.png 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-5-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-5-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-5.png    1x,
+                ../img/img-for-mob/section-three-img-5@2x.png 2x
+              "
+            />
+            <img
+              src="/img/img-for-mob/section-three-img-5.png"
+              alt="Ava Green"
+            />
+          </picture>
+          <div class="team-member-text">
+            <h3 class="team-name">Ava Green</h3>
+            <p class="team-position">Fitness Trainer</p>
+            <p class="team-description">
+              Ava integrates strength training with yoga to promote overall
+              fitness.
+            </p>
+            <ul class="social-links-list">
+              <li class="social-links-item">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./img/sprite.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-item">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./img/sprite.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-item">
+                <a
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./images/icons.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="team-member">
+          <picture class="team-photo">
+            <source
+              media="(min-width: 1336px)"
+              srcset="
+                /img/img-for-desk/section-three-img-6-desk.png    1x,
+                /img/img-for-desk/section-three-img-6-desk@2x.png 2x
+              "
+              type="image/png"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-6-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-6-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-6.png    1x,
+                ../img/img-for-mob/section-three-img-6@2x.png 2x
+              "
+            />
+            <img
+              src="/img/img-for-mob/section-three-img-6.png"
+              alt="Clark Thomas"
+            />
+          </picture>
+          <div class="team-member-text">
+            <h3 class="team-name">Clark Thomas</h3>
+            <p class="team-position">Fitness Trainer</p>
+            <p class="team-description">
+              Clark specializes in mindfulness and stress reduction techniques
+              through guided meditation.
+            </p>
+            <ul class="social-links-list">
+              <li class="social-links-item">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./img/sprite.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-item">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  class="social-link"
+                >
+                  <svg class="icon" width="24" height="24">
+                    <use
+                      class="team-icon"
+                      href="./img/sprite.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
