--- a/src/partials/section-team.html
+++ b/src/partials/section-team.html
@@ -1,5 +1,5 @@
 <section class="section-our-team">
-  <div class="container team">
+  <div class="container-team">
     <div class="section-three-container">
       <p class="subtitle">Meet</p>
       <h2 class="title">Our Team</h2>
@@ -12,14 +12,29 @@
         <li class="team-member">
           <picture class="team-photo">
             <source
+              media="(min-width: 1336px)"
               srcset="
-                /img/img-for-desk/section-three-img-1-desk.png   1x,
-                /img/img-for-desk/section-three-img-1-desk2x.png 2x
+                ../img/img-for-desk/section-three-img-1-desk.png   1x,
+                ../img/img-for-desk/section-three-img-1-desk2x.png 2x
               "
               type="image/png"
             />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-1-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-1-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-1.png    1x,
+                ../img/img-for-mob/section-three-img-1@2x.png 2x
+              "
+            />
             <img
-              src="/img/img-for-desk/section-three-img-1-desk.png"
+              src="/img/img-for-mob/section-three-img-1.png"
               alt="Liam Johnson"
             />
           </picture>
@@ -40,7 +55,7 @@
                   <svg class="icon" width="24" height="24">
                     <use
                       class="team-icon"
-                      href=".src/img/sprite.svg#icon-linkedin"
+                      href="/img/sprite.svg#icon-linkedin"
                     ></use>
                   </svg>
                 </a>
@@ -65,14 +80,29 @@
         <li class="team-member">
           <picture class="team-photo">
             <source
+              media="(min-width: 1336px)"
               srcset="
                 /img/img-for-desk/section-three-img-2-desk.png    1x,
                 /img/img-for-desk/section-three-img-2-desk@2x.png 2x
               "
               type="image/png"
             />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-2-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-2-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-2.png    1x,
+                ../img/img-for-mob/section-three-img-2@2x.png 2x
+              "
+            />
             <img
-              src="/img/img-for-desk/section-three-img-2-desk.png"
+              src="/img/img-for-mob/section-three-img-2.png"
               alt="Emma Stone"
             />
           </picture>
@@ -103,14 +133,29 @@
         <li class="team-member">
           <picture class="team-photo">
             <source
+              media="(min-width: 1336px)"
               srcset="
                 /img/img-for-desk/section-three-img-3-desk.png    1x,
                 /img/img-for-desk/section-three-img-3-desk@2x.png 2x
               "
               type="image/png"
             />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-3-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-3-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-3.png    1x,
+                ../img/img-for-mob/section-three-img-3@2x.png 2x
+              "
+            />
             <img
-              src="/img/img-for-desk/section-three-img-3-desk.png"
+              src="/img/img-for-mob/section-three-img-3.png"
               alt="Sophia Lee"
             />
           </picture>
@@ -141,14 +186,29 @@
         <li class="team-member">
           <picture class="team-photo">
             <source
+              media="(min-width: 1336px)"
               srcset="
                 /img/img-for-desk/section-three-img-4-desk.png    1x,
                 /img/img-for-desk/section-three-img-4-desk@2x.png 2x
               "
               type="image/png"
             />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-4-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-4-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-4.png    1x,
+                ../img/img-for-mob/section-three-img-4@2x.png 2x
+              "
+            />
             <img
-              src="/img/img-for-desk/section-three-img-4-desk.png"
+              src="/img/img-for-mob/section-three-img-4.png"
               alt="Noah Brown"
             />
           </picture>
@@ -180,14 +240,29 @@
         <li class="team-member">
           <picture class="team-photo">
             <source
+              media="(min-width: 1336px)"
               srcset="
                 /img/img-for-desk/section-three-img-5-desk.png    1x,
                 /img/img-for-desk/section-three-img-5-desk@2x.png 2x
               "
               type="image/png"
             />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-5-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-5-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-5.png    1x,
+                ../img/img-for-mob/section-three-img-5@2x.png 2x
+              "
+            />
             <img
-              src="/img/img-for-desk/section-three-img-5-desk.png"
+              src="/img/img-for-mob/section-three-img-5.png"
               alt="Ava Green"
             />
           </picture>
@@ -247,14 +322,29 @@
         <li class="team-member">
           <picture class="team-photo">
             <source
+              media="(min-width: 1336px)"
               srcset="
                 /img/img-for-desk/section-three-img-6-desk.png    1x,
                 /img/img-for-desk/section-three-img-6-desk@2x.png 2x
               "
               type="image/png"
             />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ../img/img-for-tabl/section-three-img-6-tabl.png    1x,
+                ../img/img-for-tabl/section-three-img-6-tabl@2x.png 2x
+              "
+            />
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ../img/img-for-mob/section-three-img-6.png    1x,
+                ../img/img-for-mob/section-three-img-6@2x.png 2x
+              "
+            />
             <img
-              src="/img/img-for-desk/section-three-img-6-desk.png"
+              src="/img/img-for-mob/section-three-img-6.png"
               alt="Clark Thomas"
             />
           </picture>
