--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,17 +1,74 @@
-/* header-container */
+/* header-page */
 .header-page {
-  background-color: #f2fafa;
+  height: 64px;
 }
-.header-container {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* .header-section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
+} */
 
 /* navigation header  */
 
+.header-mob {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+
+.navbar-svg {
+  fill: #0d0b0a;
+  stroke: #0d0b0a;
+}
+/* .header-navigation-list {
+  display: flex;
+} */
+
 /* logo yogabloom */
+.logo-link {
+  display: flex;
+}
+.logo-link-svg {
+  stroke: black;
+  fill: #fff;
+}
 
 /* a-Join */
+.link-join {
+  display: flex;
+  justify-content: center;
+  background: #c2d9fc;
+  border: 1px solid #c2d9fc;
+  border-radius: 100px;
+  width: 74px;
+  height: 34px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #0d0b0a;
+}
+.join-p {
+  padding: 4px 22px;
+}
+
+@media (min-width: 768px) {
+  .header-page {
+    height: 72px;
+  }
+}
 
 /* navbar mobile menu */
