--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,36 +1,46 @@
 <header class="header-page">
-  <div class="container header-container">
-    <!-- navigation header -->
-    <nav class="header-navigation">
-      <ul class="header-navigation-list">
-        <li class="navigation-list-item">
-          <a class="navigation-item-link" href="">Yoga Classes</a>
-        </li>
-        <li class="navigation-list-item">
-          <a class="navigation-item-link" href="">Team</a>
-        </li>
-        <li class="navigation-list-item">
-          <a class="navigation-item-link" href="">Testimonials</a>
-        </li>
-        <li class="navigation-list-item">
-          <a class="navigation-item-link" href="">Prising</a>
-        </li>
-        <li class="navigation-list-item">
-          <a class="navigation-item-link" href="">Contacts</a>
-        </li>
-      </ul>
-      <!-- logo yogabloom -->
-      <a class="logo-link" href="/src/index.html">
-        <svg class="logo-link-svg" width="108" height="32">
-          <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
-        </svg>
-      </a>
-      <!-- a-Join -->
-      <a href="">Join</a>
-    </nav>
+  <div class="container">
+    <div class="header-section">
+      <nav class="header-navigation">
+        <ul class="header-navigation-list visually-hidden">
+          <li class="navigation-list-item">
+            <a class="navigation-item-link" href="">Yoga Classes</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-item-link" href="">Team</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-item-link" href="">Testimonials</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-item-link" href="">Prising</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-item-link" href="">Contacts</a>
+          </li>
+        </ul>
+        <div class="header-mob">
+          <!-- logo navbar -->
+          <button type="button" class="navbar-button">
+            <svg class="navbar-svg" width="43" height="32">
+              <use href="./images/icons.svg#icon-navbar"></use>
+            </svg>
+          </button>
+          <!-- logo yogabloom -->
+          <a class="logo-link" href="/src/index.html">
+            <svg class="logo-link-svg" width="108" height="32">
+              <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
+            </svg>
+          </a>
+          <!-- a-Join -->
+          <a class="link-join" href="#"> <p class="join-p">Join</p></a>
+        </div>
+      </nav>
+    </div>
   </div>
+
   <!-- navbar mobile menu -->
-  <div class="navbar-menu">
+  <!-- <div class="navbar-menu">
     <div class="container navbar-menu-container">
       <button type="button" class="navbar-close">
         <svg class="navbar-close-svg" width="12" height="12">
@@ -46,8 +56,8 @@
           <li class="navbar-item"><a href="navbar-link"></a></li>
         </ul>
       </nav>
-      <!-- a-Join -->
-      <a href="">Join</a>
+
+      <a href=""></a>
     </div>
-  </div>
+  </div> -->
 </header>
