--- a/src/css/section-testimonials.css
+++ b/src/css/section-testimonials.css
@@ -18,8 +18,6 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.6;
-  text-align: center;
-  color: #0d0b0a;
   margin-bottom: 24px;
 }
 
@@ -27,6 +25,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  align-items: stretch;
   margin: 0 auto;
   gap: 24px;
 }
@@ -47,8 +46,6 @@
   font-weight: 400;
   font-size: 22px;
   line-height: 1.6;
-  text-align: center;
-  color: #0d0b0a;
   margin-bottom: 32px;
 }
 
@@ -63,6 +60,7 @@
 .testimonial-img {
   border-radius: 50%;
   object-fit: cover;
+  overflow: hidden;
 }
 
 .author-name {
@@ -70,7 +68,6 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 1.6;
-  color: #0d0b0a;
 }
 
 .author-role {
@@ -78,7 +75,6 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  color: #0d0b0a;
 }
 
 /* team  tab*/
