--- a/src/partials/section-testimonials.html
+++ b/src/partials/section-testimonials.html
@@ -14,7 +14,7 @@
         </p>
         <div class="testimonial-author">
           <img
-            src="/img/img-for-desk/section-four-img-1-desk.png"
+            src="/img/avatar/avatar-1.png"
             alt="photo Donna Norman"
             width="56"
             height="56"
@@ -33,7 +33,7 @@
         </p>
         <div class="testimonial-author">
           <img
-            src="/img/img-for-desk/section-four-img-1-desk.png"
+            src="/img/avatar/avatar-2.png"
             alt="photo Donna Norman"
             width="56"
             height="56"
@@ -52,7 +52,7 @@
         </p>
         <div class="testimonial-author">
           <img
-            src="/img/img-for-desk/section-four-img-1-desk.png"
+            src="/img/avatar/avatar-3.png"
             alt="photo Donna Norman"
             width="56"
             height="56"
@@ -72,7 +72,7 @@
 
         <div class="testimonial-author">
           <img
-            src="/img/img-for-desk/section-four-img-1-desk.png"
+            src="/img/avatar/avatar-4.png"
             alt="photo Donna Norman"
             width="56"
             height="56"
