--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 <header class="header-page">
-  <div class="container">
+  <div class="container header-container">
     <div class="header-section">
       <nav class="header-navigation">
-        <ul class="header-navigation-list visually-hidden">
+        <ul class="header-navigation-list">
           <li class="navigation-list-item">
             <a class="navigation-item-link" href="">Yoga Classes</a>
           </li>
