--- a/src/css/section-breathe-space.css
+++ b/src/css/section-breathe-space.css
@@ -23,7 +23,6 @@
     text-align: center;
     max-width: 768px;
     color: #0d0b0a;
-    margin-bottom: 48px;
     margin: 0 auto 48px;
     
 }
@@ -76,7 +75,7 @@
     }
     .yoga-gallery-list li {
         flex: 0 1 calc((100% - 48px) / 3);
-        min-width: 421px;
+        max-width: 421px;
     }
     .section-four-title {
         font-size: 52px;
