--- a/src/partials/section-team.html
+++ b/src/partials/section-team.html
@@ -1,4 +1,4 @@
-<section class="section-our-team">
+<section class="container">
   <div class="container-team">
     <div class="section-three-container">
       <p class="subtitle">Meet</p>
@@ -55,7 +55,7 @@
                   <svg class="icon" width="24" height="24">
                     <use
                       class="team-icon"
-                      href="/img/sprite.svg#icon-linkedin"
+                      href="./img/sprite.svg#icon-linkedin"
                     ></use>
                   </svg>
                 </a>
@@ -69,7 +69,7 @@
                   <svg class="icon" width="24" height="24">
                     <use
                       class="team-icon"
-                      href="./img/sprite.svg#icon-instagram"
+                      href="/img/sprite.svg#icon-instagram"
                     ></use>
                   </svg>
                 </a>
