--- a/src/css/section-team.css
+++ b/src/css/section-team.css
@@ -1,4 +1,4 @@
-.section-our-team {
+.container {
     padding: 64px 16px;
 }
 
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 64px 16px;
+    justify-content: center;
 }
 
 .subtitle {
@@ -36,10 +36,12 @@
     flex-direction: column;
     row-gap: 48px;
     align-items: center;
+    
 }
 
 .team-member {
-    width: 343px;
+    max-width: 343px;
+
 }
 
 .team-member-text {
@@ -50,6 +52,7 @@
 .team-description {
     padding-top: 12px;
 }
+
 
 /*  Team section media queries */
 /* Tablet: 768px */
@@ -76,9 +79,11 @@
     }
 
     .team-member {
-        width: calc((704px - 24px) / 2);
+        flex: calc((704px - 24px) / 2);
         height: 100%;
+        max-width: 340px;
     }
+      
 
 }
 
@@ -90,14 +95,19 @@
         justify-content: flex-start;
         flex-direction: column;
         gap: 64px;
-        width: 1312px;
+        
     }
 
     .team-member {
-        width: calc((100% - 48px) / 3);
+        flex: calc((100% - 48px) / 3);
+        max-width: 421px;
     }
 
-    .section-our-team {
+    .container {
         padding: 112px 64px;
     }
+    .container-team {
+        width: 1312px;
+    }
+       
 }
