--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
           <!-- logo navbar -->
           <button type="button" class="navbar-button">
             <svg class="navbar-svg" width="43" height="32">
-              <use href="/src/img/sprite.svg"></use>
+              <use href="/src/img/sprite.svg#icon-navbar"></use>
             </svg>
           </button>
           <!-- logo yogabloom -->
@@ -60,12 +60,4 @@
       <a href=""></a>
     </div>
   </div> -->
-
-  <header class="header">
-    <div class="container">
-      <svg>
-        <use href="/img/public/sprite.svg#icon-chek"></use>
-      </svg>
-    </div>
-  </header>
 </header>
