--- a/src/css/section-team.css
+++ b/src/css/section-team.css
@@ -1,12 +1,9 @@
-.container {
-    padding: 64px 16px;
-}
-
-.container-team {
+.container-team-general {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 64px 0;
 }
 
 .subtitle {
@@ -18,7 +15,7 @@
 
 .title {
     font-weight: 400;
-    font-size: 44px;
+    font-size: 40px;
     line-height: 1.2;
     letter-spacing: 0.01em;
     text-align: center;
@@ -27,6 +24,11 @@
 
 .paragraph-team {
     font-weight: 400;
+    font-size: 16px;
+    
+    /* line-height: 26px; */
+    line-height: 1.6;
+    color: var(--color-scheme-4-text);
     text-align: center;
     padding-bottom: 48px;
 }
@@ -68,6 +70,9 @@
         justify-content: center;
 
     }
+        .paragraph-team {
+            padding-bottom: 40px;   
+        }
 
     .team-container {
         display: flex;
@@ -77,15 +82,25 @@
         gap: 64px;
 
     }
-
+    .team-member-text {
+            padding-top: 24px;
+    }
+    .title {
+            font-size: 52px;
+        }
     .team-member {
         flex: calc((704px - 24px) / 2);
         height: 100%;
         max-width: 340px;
     }
-      
+      .subtitle {
+        margin-bottom: 16px;
+      }
+          .fjfgjg {
+              padding: 40px 0;   }
 
 }
+
 
 /*  Desktop: 1336px */
 @media screen and (min-width: 1336px) {
@@ -97,17 +112,15 @@
         gap: 64px;
         
     }
-
+        .container-team-general {
+            padding: 112px 0;
+            max-width: 1312px;
+        }
     .team-member {
         flex: calc((100% - 48px) / 3);
         max-width: 421px;
     }
 
-    .container {
-        padding: 112px 64px;
-    }
-    .container-team {
-        width: 1312px;
-    }
-       
+ 
+  
 }
