--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,3 +20,4 @@
 @import url('./section-testimonials.css');
 @import url('./section-pricing-plan.css');
 @import url('./footer.css');
+@import url('./modal.css');
