--- a/src/partials/section-pricing-plan.html
+++ b/src/partials/section-pricing-plan.html
@@ -1,14 +1,13 @@
 <section class="pricing-section">
-
   <div class="container">
-    <h4 class="subheading">Affordable</h4>
+    <p class="subheading">Affordable</h4>
     <h2 class="heading">Pricing Plans</h2>
     <p class="description">Choose the perfect plan for your yoga journey.</p>
 
-      <div class="pricing-container">
+    <div class="pricing-container">
       <!-- One Session -->
-      <div class="pricing-card">
-        <h3 class="h3tit" >One Session</h3>
+      <article class="pricing-card">
+        <h3 class="h3tit">One Session</h3>
         <p class="price">$10</p>
         <ul class="ulontwo">
           <li class="liil">✓ 1 group session</li>
@@ -16,22 +15,22 @@
           <li class="liil">✓ Community support group</li>
         </ul>
         <button class="butontwo">Join</button>
-      </div>
+      </article>
 
       <!-- 8 Sessions -->
-      <div class="pricing-card">
+      <article class="pricing-card">
         <h3 class="h3tit">8 Sessions Package</h3>
         <p class="price">$65</p>
         <ul class="ulontwo">
-          <li class="liil" >✓ 6 Group Sessions</li>
+          <li class="liil">✓ 6 Group Sessions</li>
           <li class="liil">✓ 2 Individual Sessions</li>
           <li class="liil">✓ Community support group</li>
         </ul>
         <button class="butontwo">Join</button>
-      </div>
+      </article>
 
       <!-- 12 Sessions -->
-      <div class="pricing-card three80 ">
+      <article class="pricing-card wide">
         <h3 class="h3tit twopart">12 Sessions Package</h3>
         <p class="price thprice">$80</p>
         <ul class="ulthree">
@@ -42,8 +41,7 @@
           <li class="liil">✓ Community support group</li>
         </ul>
         <button class="butonthre">Join</button>
-      </div>
-      </div>
+      </article>
+    </div>
   </div>
-   
-  </section>    
+</section>
