--- a/src/css/section-pricing-plan.css
+++ b/src/css/section-pricing-plan.css
@@ -1,53 +1,17 @@
- * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Segoe UI", sans-serif;
-}
-
-body {
-  background-color: #f9f7f6;
-  color: #333;
-  padding: 20px;
-}
-
-.container {
-    min-width: 320px;
-    max-width: 375px;
-    margin: 0 auto;
-    padding: 0 16px;
-}
-
-/* Styles for Tablet devices */
-@media only screen and (min-width: 768px) {
-    .container {
-        max-width: 768px;
-        padding: 0 32px;
-    }
-}
-
-/* Styles for Desktop devices */
-@media only screen and (min-width: 1200px) {
-    .container {
-        max-width: 1440px;
-        padding: 0 64px;
-    } }
 
 /* Section Styling */
-.pricing-section {padding-top: 64px;
-  padding-bottom: 96px;
+
+.pricing-section {
+  padding: 64px 0;
   text-align: center;
-  padding: 40px 20px;
 }
 
 .subheading {
+font-size: 16px;
 margin-bottom: 12px;
 font-family: "Sarabun", sans-serif;
 font-weight: 600;
-font-size: 16px;
 line-height: 150%;
-text-align: center;
-color: #0d0b0a;  
 
 }
 
@@ -59,7 +23,7 @@ font-size: 40px;
 line-height: 120%;
 letter-spacing: 0.01em;
 text-align: center;
-color: #0d0b0a;
+
 }
 
 .description {
@@ -68,25 +32,31 @@ font-family: "Sarabun", sans-serif;
 font-weight: 400;
 font-size: 16px;
 line-height: 160%;
-text-align: center;
-color: #0d0b0a;
+margin-bottom: 48px;
 }
+
+.pricing-card {
+  border: 0px solid rgba(13, 11, 10, 0.15);
+  background: #fff;
+  padding: 32px 24px;
+  border-radius: 16px;
+  min-width: 340px;
+  max-width: 421px;
+}
+
 
 /* Pricing Cards Container */
 .pricing-container {
   display: flex;
   flex-direction: column;
   gap: 32px;
+  border: 0px solid rgba(13, 11, 10, 0.15);
+  border-radius: 16px
 }
 
 /* Pricing Card */
-.pricing-card {
-  background: #fff;
-  padding:  32px 24px;
-  border: 0px solid rgba(13, 11, 10, 0.15);
-  border-radius: 16px;
- 
-}
+
+
 
 
 .h3tit{font-family: "Cabin", sans-serif;
@@ -96,7 +66,7 @@ font-size: 18px;
 line-height: 140%;
 letter-spacing: 0.01em;
 text-align: center;
-color: #0d0b0a;}
+}
 
 .pricing-card h3 {
   margin-bottom: 8px;
@@ -122,7 +92,7 @@ margin-bottom: 24px;
 font-weight: 400;
 font-size: 16px;
 line-height: 160%;
-color: #0d0b0a;}
+}
 
 .pricing-card li {
   margin-bottom: 16px;
@@ -132,7 +102,7 @@ button {font-family: "Sarabun", sans-serif;
 font-weight: 500;
 font-size: 16px; 
 line-height: 160%;
-color: #0d0b0a;
+
 border: 1px solid #c2d9fc;
 border-radius: 100px;
 padding: 10px 24px;
@@ -140,63 +110,117 @@ width: 295px;
 height: 46px;
 background: #c2d9fc;
 }
+
 .butontwo,
 .butonthre{margin-top: 32px;}
 
-button:hover {
-  background: #bbaaf0;
-}
 
-.pricing-container{border: 0px solid rgba(13, 11, 10, 0.15);
-border-radius: 16px;
-}
 
-/* Tablet Layout */
-@media screen and (min-width: 768px) {
-  .pricing-container {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  }
-  .subheading{margin-bottom: 16px;}
-   
-  .heading{margin-bottom: 24px;}
-
-  .description{font-size: 18px;
-  margin-bottom: 24px;}
-
-  .h3tit{font-size: 22px;}
-  
-  .three80{ width:100%;}
-
-  .pricing-card{width:48%;
-  }
-
-  .thprice{text-align: left;}
-
-  .twopart{text-align: left;}
-
-  .price{margin-bottom: 32px; font-size: 72px;
-  }
-}
 
 /* Desktop Layout */
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
 
-    .pricing-section{padding-top:112px ;
-    padding-bottom:112px;}
+  .pricing-section {
+     padding: 40px 0;
+  }
 
-    .pricing-container {
+  .pricing-container {
+    display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 30px;
+    flex-wrap: wrap;
+    gap: 24px;
    }
-  .description{margin-bottom: 40px;}
-  .ulontwo{margin-bottom: 116px;}
-  .ulthree{margin-bottom: 32px;}
-  .pricing-card {width: 31%; 
-   }
-  .butontwo{margin-top: 116px;}
-  .butonthre{margin-top: 32px;}
+
+  .description {
+    font-size: 18px;
+    margin-bottom: 24px;
+}
+
+   .pricing-card {
+    padding: 32px;
+    flex: 1 1 calc(50% - 12px);
+}
+
+
+ .pricing-card.wide {
+  flex: 1 1;
+  max-width: 704px;
+  /* занимает всю ширину */
+}
+
+}
+
+@media screen and (min-width: 1336px){
+
+
+  .heading {
+    font-size: 52px;
+    margin-bottom: 24px;
+  }
+
+  .description {
+    margin-bottom: 24px;
+  } 
+
+  .pricing-container{
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .pricing-card.wide {
+    width: 421px;
+  }
+}
+
+
+.ulontwo {
+  margin-bottom: 116px;
+}
+
+.ulthree {
+  margin-bottom: 32px;
+}
+
+
+.butontwo {
+  margin-top: 116px;
+}
+
+.butonthre {
+  margin-top: 32px;
+}
+
+
+.pricing-container {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.subheading {
+  margin-bottom: 16px;
+}
+
+
+.h3tit {
+  font-size: 22px;
+}
+
+.three80 {
+  width: 100%;
+}
+
+
+.thprice {
+  text-align: left;
+}
+
+.twopart {
+  text-align: left;
+}
+
+.price {
+  margin-bottom: 32px;
+  font-size: 72px;
 }
